Fix lesson title alignment (#2383)

--- a/assets/css/frontend/sensei.scss
+++ b/assets/css/frontend/sensei.scss
@@ -118,6 +118,7 @@ a.sensei-certificate-link {
       }
     }
     .lesson  {
+      @include clearfix();
       header  {
         h2  {
           margin: 0;
